--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
